hphp/hack/test/typecheck/as_expression/dynamic.php.exp
File "dynamic.php", line 4, characters 14-26:
Invalid argument (Typing[4110])
File "dynamic.php", line 17, characters 21-23:
Expected int
File "dynamic.php", line 4, characters 20-26:
But got dynamic
File "dynamic.php", line 5, characters 14-26:
Invalid argument (Typing[4110])
File "dynamic.php", line 17, characters 21-23:
Expected int
File "dynamic.php", line 5, characters 20-26:
But got dynamic
File "dynamic.php", line 12, characters 14-15:
Invalid argument (Typing[4110])
File "dynamic.php", line 17, characters 21-23:
Expected int
File "dynamic.php", line 11, characters 9-15:
But got dynamic
